# xcur2png

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  Xcur2png-f582d64-x86_64.AppImage  config.h.in  configure  configure.ac  xcur2png.1  xcur2png.c  xcur2png.spec
AppDir/: .DirIcon  xcur2png.desktop
debian/: Makefile.in  changelog  control  copyright  rules
